syntax = "proto3";

package url_shortener;

option go_package = "github.com/ydrobot/golang-url_shortener/pkg/url_shortener_pb";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service UrlShortenerService {

    // Create short url
    rpc Create (CreateRequest) returns (CreateResponse) {
        option (google.api.http) = {
            get: "/url/create"
        };
    }

    // Remove short url
    rpc Remove (RemoveRequest) returns (RemoveResponse) {
        option (google.api.http) = {
            post: "/url/remove"
            body: "*"
        };
    }

    // Redirect
    rpc Redirect(RedirectRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            get: "/{url}"
        };
    }

    // Get all urls with short
    rpc GetList(GetListRequest) returns (GetListResponse) {
        option (google.api.http) = {
            get: "/url/list"
        };
    }
}

message CreateRequest {
    string url = 1;
}

message CreateResponse {
    string url = 1;
}

message RemoveRequest {
    int64 id = 1;
}

message RemoveResponse {
}

message RedirectRequest {
    string url = 1;
}

message RedirectResponse {
}


message GetListRequest {

}

message GetListResponse {

    repeated Info urls = 1;

    message Info {
        int64 id = 1;
        string url = 2;
        string short_url = 3;
        int32 redirected = 4;
        google.protobuf.Timestamp ctreated_at = 5;
    }
}